fixing exceeding cart overlay background when visible

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -13,7 +13,7 @@
     &__overlay-background {
         top: 80px;
         position: absolute;
-        width: 100vw;
+        width: 100%;
         min-height: 100vh;
         height: 100%;
         background: #39374838;
